fixed search suggestion styling overlaps, limit search suggestion

--- a/src/App.css
+++ b/src/App.css
@@ -44,25 +44,22 @@ a {
 .input-container {
   margin: 0 auto;
   display: flex;
-  text-align: center;
   align-items: center;
   justify-content: center;
-  max-width: 20%;
+  max-width: 30%;
   max-height: 1em;
-  position: relative;
 }
 
 
 .suggestions {
   position: relative;
-  width: fit-content;
 }
 
 .search-suggestions {
   position: absolute;
   z-index: 999;
   height: auto;
-  width: auto;
+  width: 100%;
   background-color:white;
   text-align: left;
   font-size: .65rem;
